force-app/main/default/objects/Saisie_de_temps_sous_tache__c/Saisie_de_temps_sous_tache__c.object-meta.xml
<CustomObject>
    <label>Saisie de temps sous tâche</label>
    <nameField>
        <displayFormat>SDT-ST-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Saisie de temps sous tâches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>