force-app/main/default/objects/Saisie_de_temps_sous_tache__c/fields/Heures__c.field-meta.xml
<CustomField>
    <fullName>Heures__c</fullName>
    <formula>(Heure_de_fin__c -  Heure_de_debut__c ) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Heures</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>