force-app/main/default/objects/Saisie_de_temps_sous_tache__c/fields/Intervalle_temps_sous_tache__c.field-meta.xml
<CustomField>
    <fullName>Intervalle_temps_sous_tache__c</fullName>
    <label>Intervalle temps sous tache</label>
    <referenceTo>Intervalle_temps_sous_tache__c</referenceTo>
    <relationshipLabel>Saisie de temps sous tâches</relationshipLabel>
    <relationshipName>Saisie_de_temps_sous_t_ches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>